--- a/docs/01.语言/01.Go/00.Go的基本介绍.md
+++ b/docs/01.语言/01.Go/00.Go的基本介绍.md
@@ -16,7 +16,7 @@ author:
 ## 一、语言特性
 ### 1，简洁易读
 * go语言通过设计简洁、清晰的语法和标准库，使得代码更加易读易写；
-* 同时，还避免了一些语言中常见的复杂特性和概念，如继承和多态等，采用接口实现多态性，减少了冗余代码，提高了代码的可读性；
+* 避免了一些语言中常见的复杂特性和概念，如继承和多态等，采用接口实现多态性，减少了冗余代码，提高了代码的可读性；
 
 ### 2，并发支持
 * go语言内置了原生的并发支持，主要是通过 goroutine 和 channel 实现的；
