--- a/docs/05.更多/01.常用网站.md
+++ b/docs/05.更多/01.常用网站.md
@@ -46,7 +46,8 @@ author:
 * [大圣编程自学网](https://shengxinjing.cn/) by 大圣
 * [开发者武器库](https://devtool.tech/)
 * [工具大全](https://www.fly63.com/tool/home.html)
-### 社区互动
+
+## 社区互动
 - [gitter](https://gitter.im/home/explore)
 - [兔小巢](https://txc.qq.com/)
 
