--- a/docs/01.语言/01.Go/14.chan.md
+++ b/docs/01.语言/01.Go/14.chan.md
@@ -11,7 +11,9 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
-
+::: tip
+本文代码基于 go1.17.13，src/runtime/chan.go
+:::
 ## 一、简述
 * ……
 
@@ -30,7 +32,7 @@ author:
 ### 3，简单示例
 
 ## 四、源码解读
-### hchan
+### 1，hchan
 ::: details
 ```go
 type hchan struct {
@@ -61,7 +63,7 @@ const (
 * hchan 是 chan 的结构体类型，其底层是一个数组，包含数组的地址、长度、数组中元素的个数、元素的大小、元素的类型，以及生产队列、消费队列及其对应的索引；
 * hchanSize 表示了 hchan 结构体所占内存字节数，进行了**字节对齐**，对齐单位为 maxAlign；
 
-### waitq
+### 2，waitq
 ::: details
 ```go
 // goroutine 的生产队列或消费队列
@@ -122,7 +124,7 @@ func (q *waitq) dequeue() *sudog {
 * enqueue 将 goroutine 添加到该队列的尾部，并更新指向尾部的指针；
 * dequeue 从队列头部中取出一个 goroutine，并更新指向队列头部的指针；
 
-### makechan
+### 3，makechan
 ::: details
 ```go
 func makechan(t *chantype, size int) *hchan {
@@ -184,7 +186,12 @@ func makechan(t *chantype, size int) *hchan {
 * 当需要申请的数组内存大小不为 0 时，且元素是不含指针的类型，则直接将 hchan 结构体和数组一起申请内存，只需要调用mallocgc一次即可分配完成，数组的内存在 hchan 之后，并将数组内存的首地址赋给 buf 字段；
 * 否则，说明元素是含有指针类型的元素，对 hchan 和数组分别申请内存，以方便 gc 进行内存回收；
 
-### chansend
+### 4，chansend
+* chansend 用于向管道中写入数据，对于当前 goroutine 是否允许被阻塞，分为不同的处理方式；
+* 如果 chan 为 nil，非阻塞模式下直接返回，阻塞模式下 goroutine 被挂起，会一直休眠陷入死锁，故直接抛出错误并退出，错误内容："fatal error: all goroutines are asleep - deadlock!"；
+* 如果 chan 不为 nil，非阻塞模式，且 chan 没有关闭，但已经满了，则直接返回，即在不获取锁的情况下快速处理；
+* 如果 chan 已经关闭，则直接 panic，即向一个关闭的通道写入数据会 panic；
+* 尝试从消费者队列中取出一个 goroutine，如果能够能够取到，则说明当前管道是非缓冲管道或是管道已经满了
 ::: details
 ```go
 // go:nosplit 编译代码中 c <- X 的入口点
@@ -204,14 +211,6 @@ func chansend(c *hchan, ep unsafe.Pointer, block bool, callerpc uintptr) bool {
 		// 调用 gopark 将当前 goroutine 休眠，关闭 nil 的 chan 会 panic，故当前 goroutine 会一直休眠，陷入死锁
 		gopark(nil, nil, waitReasonChanSendNilChan, traceEvGoStop, 2)
 		throw("unreachable")
-	}
-
-	if debugChan {
-		print("chansend: chan=", c, "\n")
-	}
-
-	if raceenabled {
-		racereadpc(c.raceaddr(), callerpc, funcPC(chansend))
 	}
 
 	// 快速路径：在不获取锁的情况下检查失败的非阻塞操作。
@@ -330,22 +329,6 @@ func chansend(c *hchan, ep unsafe.Pointer, block bool, callerpc uintptr) bool {
 // send 处理空通道 c 上的发送操作。发送方发送的值 ep 被复制到接收方 sg。然后接收器被唤醒。
 // 通道 c 必须为空并锁定。send 通过 unlockf 解锁 c。sg 必须已从 c 中取消排队，ep 必须为非 nil 并指向堆或调用方的堆栈。
 func send(c *hchan, sg *sudog, ep unsafe.Pointer, unlockf func(), skip int) {
-	if raceenabled {
-		if c.dataqsiz == 0 {
-			racesync(c, sg)
-		} else {
-			// Pretend we go through the buffer, even though
-			// we copy directly. Note that we need to increment
-			// the head/tail locations only when raceenabled.
-			racenotify(c, c.recvx, nil)
-			racenotify(c, c.recvx, sg)
-			c.recvx++
-			if c.recvx == c.dataqsiz {
-				c.recvx = 0
-			}
-			c.sendx = c.recvx // c.sendx = (c.sendx+1) % c.dataqsiz
-		}
-	}
 	// sg.elem 指向接收到的值存放的位置，如 val <- ch，指的就是 &val
 	if sg.elem != nil {
 		// 直接拷贝内存（从发送者到接收者）
