--- a/docs/01.语言/01.Go/13.context.md
+++ b/docs/01.语言/01.Go/13.context.md
@@ -19,27 +19,27 @@ author:
 * context 是**线程安全**的，可以在多个 goroutine 之间共享和传递，但不应该在每个函数中传递，而是将其作为参数传递给函数的顶层调用，并将其传递给需要使用 context 的函数，这样可以更好地控制 context 的生命周期；
 
 ## 二、基本原理
-- `context.Background()`：返回一个空的上下文，**是所有上下文的根节点**，通常用于整个应用程序的上下文；
-- `context.TODO()`：类似于 `context.Background()`，在不清楚应该使用哪个上下文时可以**临时使用**；
-- `context.WithCancel(parent)`：返回一个**可取消的上下文**和一个取消函数，当调用取消函数时，该上下文和其子上下文都会收到取消信号；
-- `context.WithDeadline(parent, d)`：返回一个**带有截止时间的上下文**和取消函数，当调用取消函数或截止时间到期时，该上下文和其子上下文都会收到取消信号；
-- `context.WithTimeout(parent, timeout)`：返回一个**带有超时时间的上下文**和取消函数，当调用取消函数或超过指定的超时时间后，该上下文和其子上下文都会收到取消信号；
-- `context.WithValue(parent, key, value)`：返回一个**带有键值对的上下文**，可以在 goroutine 之间传递请求特定的数据；
+- `context.Background()`：返回一个空的上下文，<span style="color: red;">**是所有上下文的根节点**</span>，通常用于整个应用程序的上下文；
+- `context.TODO()`：类似于 `context.Background()`，在不清楚应该使用哪个上下文时可以<span style="color: red;">**临时使用**</span>；
+- `context.WithCancel(parent)`：返回一个<span style="color: red;">**可取消的上下文**</span>和取消函数，当调用取消函数时，该上下文和其子上下文都会收到取消信号；
+- `context.WithDeadline(parent, d)`：返回一个<span style="color: red;">**带有截止时间的上下文**</span>和取消函数，当调用取消函数或截止时间到期时，该上下文和其子上下文都会收到取消信号；
+- `context.WithTimeout(parent, timeout)`：返回一个<span style="color: red;">**带有超时时间的上下文**</span>和取消函数，当调用取消函数或超过指定的超时时间后，该上下文和其子上下文都会收到取消信号；
+- `context.WithValue(parent, key, value)`：返回一个<span style="color: red;">**带有键值对的上下文**</span>，可以在 goroutine 之间传递请求特定的数据；
 - `Background()` 或 `TODO()` 可以创建一个根 Context 对象；
 - `WithCancel`、`WithDeadline`、`WithTimeout` 和 `WithValue` 函数接受一个 Context(父类) 并返回一个派生 Context(子类) 和一个 `CancelFunc`；
-- **调用 `CancelFunc` 会取消子协程及其子协程，移除父协程对子协程的引用，并停止所有相关的计时器，未能调用 `CancelFunc` 会泄漏子协程及其子协程，直到父进程被取消或计时器触发**；
+- <span style="color: red;">**调用 `CancelFunc` 会取消子协程及其子协程，移除父协程对子协程的引用，并停止所有相关的计时器，未能调用 `CancelFunc` 会泄漏子协程及其子协程，直到父进程被取消或计时器触发**</span>；
 - 在并发操作中，可以通过 Context 对象的 `Done()` 方法来获取一个 chan ，当 Context 被取消或者超时时，这个 chan 会关闭，**可以通过监听这个通道来处理取消或超时的情况**；
 
 ## 三、基本用法
 ### 1，应用场景
-* 主要用于处理并发请求的**超时、参数传递、及时取消**等，能够有效控制请求过程中的资源使用和避免潜在的资源泄露；
+* 主要用于处理并发请求的<span style="color: red;">**超时、参数传递、及时取消**</span>等，能够有效控制请求过程中的资源使用和避免潜在的资源泄露；
 * 广泛应用于go的http模块、echo框架和gin框架中，以及rpc请求、并发数控制、错误传播等场景；
 
 ### 2，注意事项
-- **不要将 Context 塞到结构体**里，直接将 Context 类型作为函数的第一参数，而且一般都命名为 ctx；
-- **不要向函数传入一个 `nil` 的 Context**，如果不确定要使用哪个上下文，可以传递`context.TODO()`；
-- **不要把本应该作为函数参数的类型塞到 context 中**，仅将 context 值用于传输进程和 api 的请求作用域数据，例如：登陆的 session、cookie 等；
-- 同一个 context 可以被传递给运行在不同 goroutine 中的函数，**context 对于多个 goroutine 同时使用是安全的**；
+- <span style="color: red;">**不要将 Context 塞到结构体**</span>的里，直接将 Context 类型作为函数的第一参数，而且一般都命名为 ctx；
+- <span style="color: red;">**不要向函数传入一个 `nil` 的 Context**</span>的，如果不确定要使用哪个上下文，可以传递`context.TODO()`；
+- <span style="color: red;">**不要把本应该作为函数参数的类型塞到 context 中**</span>的，仅将 context 值用于传输进程和 api 的请求作用域数据，例如：登陆的 session、cookie 等；
+- 同一个 context 可以被传递给运行在不同 goroutine 中的函数，<span style="color: red;">**context 对于多个 goroutine 同时使用是安全的**</span>的；
 - 对服务器的传入请求应该创建上下文，对服务器的传出调用应该接受上下文，可以选择使用`WithCancel`、`WithDeadline`、`WithTimeout` 和 `WithValue` 函数接创建的派生上下文；
 - `go -vet` 工具检查在所有控制流路径上是否使用了 CancelFuncs；
 
@@ -173,7 +173,7 @@ type Context interface {
 * `Deadline` 返回该上下文的截止时间，未设置截止时间时返回 ok==false，连续调用将返回相同的结果；
 * `Done()` 返回一个只读的 chan：
   * 在用户执行 `case: <- ctx.Done()` 函数时会惰性创建 chan；
-  * 当该上下文主动取消、超时或到截止时间时，该 chan 会关闭，通道的关闭可能会异步发生；
+  * <span style="color: red;">**当该上下文主动取消、超时或到截止时间时，该 chan 会关闭，通道的关闭可能会异步发生**</span>；
   * 如果此上下文永远无法取消，则可能会返回 nil，连续调用返回相同的值；
   * 通过监听该 chan 是否关闭来判断该上下文是否取消，示例如下:
 	```go
@@ -392,13 +392,13 @@ func (c *cancelCtx) String() string {
 :::
 * `canceler` 是一个声明了 `cancel` 和 `Done` 函数的接口类型，能够直接取消上下文，由 `cancelCtx` 和 `timerCtx` 结构实现；
 * `closedchan` 是一个**可复用的关闭通道**，在 context 包初始化的时候关闭；
-* `cancelCtx` 是一个**可以执行取消操作的上下文结构**，继承了 `Context` 接口，同时实现了 `cancelCtx` 接口，当被取消后，它也能取消所有实现了 `canceler` 的子上下文；
+* `cancelCtx` 是一个<span style="color: red;">**可以执行取消操作的上下文结构**</span>，继承了 `Context` 接口，同时实现了 `cancelCtx` 接口，当被取消后，它也能取消所有实现了 `canceler` 的子上下文；
   * `done` 字段，以原子的方式存储了一个空结构体 chan ，当执行取消操作时该字段存储的 chan 被关闭或是被替换为关闭的 chan ，即 `closedchan`；
   * `children` 字段，存储实现了 `canceler` 接口的子上下文，该取消函数第一次被调用时置为 `nil`；
-  * `Value` 方法，重载了 `Context` 接口中的 `Value` 方法，通过 key 获取 value，**如果 key 是 `cancelCtxKey` 则返回自身**，否则调用 `Context` 接口的 `Value` 方法；
-  * `cancel` 方法，**将 `done` 字段中存储的 chan 关闭**，如果没有存储 chan 则重新存储一个关闭的 chan ；遍历 `children` 字段中存储的所有子上下文，并**递归执行子上下文的取消函数**，并将 `children` 置为 `nil`，即**删除所有的子上下文**；以及选择是否**从自己的父上下文**（实现了`canceler`接口的上下文）中的 `children` 字段**中删除自己**；
+  * `Value` 方法，重载了 `Context` 接口中的 `Value` 方法，通过 key 获取 value，<span style="color: red;">如果 key 是 `cancelCtxKey` 则返回自身</span>，否则调用 `Context` 接口的 `Value` 方法；
+  * `cancel` 方法，<span style="color: red;">**将 `done` 字段中存储的 chan 关闭**</span>，如果没有存储 chan 则重新存储一个关闭的 chan ；遍历 `children` 字段中存储的所有子上下文，并<span style="color: red;">**递归执行子上下文的取消函数**</span>，并将 `children` 置为 `nil`，即<span style="color: red;">**删除所有的子上下文**</span>；以及选择是否**从自己的父上下文**（实现了`canceler`接口的上下文）中的 `children` 字段**中删除自己**；
   * 
-  * `Done` 方法，返回 `done` 字段中存储的 chan ，如果 `done` 中没有则直接创建并返回，所以 `done` 中 chan 只有在第一次调用 `Done` 方法时才会被创建；返回的 chan 是只读的，且没有 goroutine 往里面写数据，当其他 goroutine 直接读取该 chan 时会被 block 住，**一般通过搭配 `select` 来使用，一旦关闭（`cancel` 方法被调用时），就会立即读出零值**；
+  * `Done` 方法，返回 `done` 字段中存储的 chan ，如果 `done` 中没有则直接创建并返回，所以 `done` 中 chan 只有在第一次调用 `Done` 方法时才会被创建；返回的 chan 是只读的，且没有 goroutine 往里面写数据，当其他 goroutine 直接读取该 chan 时会被 block 住，<span style="color: red;">**一般通过搭配 `select` 来使用，一旦关闭（`cancel` 方法被调用时），就会立即读出零值**</span>；
 
 ### 4，WithCancel
 :::details
@@ -506,12 +506,12 @@ func removeChild(parent Context, child canceler) {
 * `WithCancel` 返回一个基于 parent 上下文创建的可以取消的子上下文和一个取消函数，即 **`cancelCtx` 对象和包含`cancel` 方法的函数**；
   * 当返回的取消函数被调用时，或 parent 中的 `Done` 返回的 chan 被关闭时，返回的子上下文中 `Done` 返回的 chan 也会关闭，以先发生者为准；
   * **取消此上下文会释放与其关联的资源**，因此代码应在此上下文中运行的操作完成后立即调用 `cancel`；
-* `propagateCancel` **传播取消操作，父上下文被取消时，子上下文也被取消**；
+* `propagateCancel` <span style="color: red;">**传播取消操作，父上下文被取消时，子上下文也被取消**</span>；
   * 先监听 parent 中的 chan ，如果已经关闭了，则直接调用 child 的取消方法，取消 child 及其所有的子上下文；
   * 如果没有关闭，parent 是否是可以取消的上下文，即是否是 `cancelCtx` 类型的对象：
     * 如果是，**且已经执行过取消方法，则直接调用 child 的取消方法，取消 child 及其所有的子上下文**；
     * 如果是，**且没有执行过取消方法，则将 child 存入到其 `children` 字段的map中，即将 child 挂在到 parent 上**；
-    * 如果不是，**此时 child 无法挂载到 parent，parent 取消时无法自动取消 child，需要同时监听 parent 和 child 的 chan ，监听到 parent 的 chan 关闭时手动取消 child，监听到 child 的 chan 被其他 goroutine 关闭时则直接退出**；
+    * 如果不是，<span style="color: red;">**此时 child 无法挂载到 parent，parent 取消时无法自动取消 child，需要同时监听 parent 和 child 的 chan ，监听到 parent 的 chan 关闭时手动取消 child，监听到 child 的 chan 被其他 goroutine 关闭时则直接退出**</span>；
 
 ### 5，timerCtx
 ::: details
@@ -551,7 +551,7 @@ func (c *timerCtx) cancel(removeFromParent bool, err error) {
 }
 ```
 :::
-* `timerCtx` 是一个**带计时器上下文的结构**，继承了 `cancelCtx` 结构，即实现了 `cancelCtx` 接口，同时还能设置截止时间，所以该计时器上下文类型**不仅能够主动执行取消操作还能到达截止时间后自动执行取消操作**；
+* `timerCtx` 是一个**带计时器上下文的结构**，继承了 `cancelCtx` 结构，即实现了 `cancelCtx` 接口，同时还能设置截止时间，所以该计时器上下文类型<span style="color: red;">**不仅能够主动执行取消操作还能到达截止时间后自动执行取消操作**</span>；
 * `timer` 存储了一个计时器，即到截止时间后执行取消函数，`deadline` 存储截止时间；
 * `Deadline` 是重载后的方法，返回 `timerCtx` 的截止时间；
 * `cancel` 是重载后的方法，该取消操作被执行后，**先执行父上下文 `cancelCtx` 的取消方法，从其父上下文 `cancelCtx` 的子上下文(`children`)中删除此计时器上下文，计时器不为空时停止计时器**；
@@ -594,7 +594,7 @@ func WithDeadline(parent Context, d time.Time) (Context, CancelFunc) {
 * `WithDeadline `返回父上下文的副本，即一个带计时器的上下文，并将截止日期调整为不晚于 d；
 * 父上下文设置的截止时间更早，则直接通过 `WithCancel` 从父上下文中创建一个可取消的上下文，**截止时间依赖父上下文的截止时间**；
 * 父上下文设置的截止时间要晚或是没有设置截止时间，则重新从父上下文中创建一个可取消的上下文，并**设置自己的时间为截止时间**，然后**将自己挂载到 parent 上**，当 parent 取消或 chan 被关闭时，能自动或手动关闭自己；
-* 当截止时间未到期且该上下文还未被主动取消时，根据截止时间创建一个计时器，并**设置计时器到时候自动执行取消函数**；
+* 当截止时间未到期且该上下文还未被主动取消时，根据截止时间创建一个计时器，并<span style="color: red;">**设置计时器到时候自动执行取消函数**</span>；
 * 当截止时间到期、当返回的取消函数被调用时，或 parent 中的 `Done` 返回的 chan 被关闭时，返回的子上下文中 `Done` 返回的 chan 也会关闭，以先发生者为准；
 * 取消此上下文会释放与其关联的资源，因此代码应在此上下文中运行的操作完成后立即调用 `cancel`；
 
@@ -612,7 +612,7 @@ func WithTimeout(parent Context, timeout time.Duration) (Context, CancelFunc) {
   * 否则一直顺着 `context` 往上，最终找到根节点（一般是 `emptyCtx`），直接返回一个 `nil`，所以用 Value 方法的时候要判断结果是否为 `nil`；
 * `WithValue` 返回父上下文的副本，即一个可以存储键值对的上下文，其中与 key 关联的值为 val；
 * 仅对传输进程和 API 的请求范围的数据使用上下文值，而不对将可选参数传递给函数；
-* **提供的 key 必须是可比的，用户应定义自己的键类型，并且不应是字符串类型或任何其他内置类型，以避免使用上下文的包之间发生冲突**；
+* <span style="color: red;">**提供的 key 必须是可比的，用户应定义自己的键类型，并且不应是字符串类型或任何其他内置类型，以避免使用上下文的包之间发生冲突**</span>；
 ::: details
 ```go
 func WithValue(parent Context, key, val interface{}) Context {
