--- a/docs/01.语言/01.Go/14.chan.md
+++ b/docs/01.语言/01.Go/14.chan.md
@@ -191,7 +191,12 @@ func makechan(t *chantype, size int) *hchan {
 * 如果 chan 为 nil，非阻塞模式下直接返回，阻塞模式下 goroutine 被挂起，会一直休眠陷入死锁，故直接抛出错误并退出，错误内容："fatal error: all goroutines are asleep - deadlock!"；
 * 如果 chan 不为 nil，非阻塞模式，且 chan 没有关闭，但已经满了，则直接返回，即在不获取锁的情况下快速处理；
 * 如果 chan 已经关闭，则直接 panic，即向一个关闭的通道写入数据会 panic；
-* 尝试从消费者队列中取出一个 goroutine，如果能够能够取到，则说明当前管道是非缓冲管道或是管道已经满了
+* 尝试从消费者队列中取出一个 goroutine，如果能够能够取到，则说明当前管道是非缓冲管道（见下方提示）
+
+::: tips
+对于缓冲队列，当消费队列不为空时，说明管道中没有数据；当生产队列不为空时，说明管道已经满了；不可能同时存在消费队列和生产队列都不为空的情况？？？
+对于非缓冲队列，当消费队列不为空时，说明此时生产队列为空，消费队列被阻塞等待中；当生产队列不为空时，说明消费队列为空，生产队列被阻塞等待中；
+:::
 ::: details
 ```go
 // go:nosplit 编译代码中 c <- X 的入口点
