--- a/docs/01.语言/01.Go/14.chan.md
+++ b/docs/01.语言/01.Go/14.chan.md
@@ -191,11 +191,19 @@ func makechan(t *chantype, size int) *hchan {
 * 如果 chan 为 nil，非阻塞模式下直接返回，阻塞模式下 goroutine 被挂起，会一直休眠陷入死锁，故直接抛出错误并退出，错误内容："fatal error: all goroutines are asleep - deadlock!"；
 * 如果 chan 不为 nil，非阻塞模式，且 chan 没有关闭，但已经满了，则直接返回，即在不获取锁的情况下快速处理；
 * 如果 chan 已经关闭，则直接 panic，即向一个关闭的通道写入数据会 panic；
-* 尝试从消费者队列中取出一个 goroutine，如果能够能够取到，则说明当前管道是非缓冲管道（见下方提示）
+* 尝试从消费者队列中取出一个 goroutine，如果能够能够取到，无论是阻塞模式还是非阻塞模式，直接将数据从生产者的 goroutine 拷贝到消费者的 goroutine，并提前返回；如果当前管道是缓冲管道且又能够从消费者队列获取 goroutine 则说明缓冲区为空，直接拷贝能够避免将数据先从生产者 goroutine 拷贝到缓冲区再从缓冲区拷贝到消费者 goroutine 的二次拷贝带来的性能损耗；
+* 如果没有消费者，且缓冲区未满，即使非阻塞也是能写则写，直接将数据从生产者 goroutine 拷贝到缓冲区写入索引处，并更新写入索引和元素个数，提前返回；
+* 如果没有消费者，且缓冲区已满，无论是缓冲管道还是非缓冲管道，生产者 goroutine 此时是无法写入数据的，对于非阻塞模式，直接返回；
+* 对于阻塞模式，将该 goroutine 添加到该 chan 的生产者队列，并挂起阻塞等待直到被唤醒，唤醒的方式分为两种：
+  * 消费者 goroutine 从生产者队列中获取到该 goroutine 并从其拷贝数据，将其唤醒；
+  * 该 chan 被关闭了，唤醒所有的等待的 goroutine；
+* 在被其他 goroutine 唤醒前，会先将其从 chan 的生产队列中出队；
+* 被唤醒后，该 goroutine 会与当前的 chan 解除绑定，并判断被唤醒的原因，如果是因为 chan 关闭而被唤醒则直接 panic，即无法向一个关闭的 chan 写数据；
+* send 处理空通道 c 上的写入操作，生产者 goroutine 上待写入的值 ep 被复制到消费者 sg，然后该消费者被唤醒，通道 c 必须为空并锁定（此时才能直接在生产者和消费者两个 goroutine 之间拷贝数据）；
 
 ::: tips
-对于缓冲队列，当消费队列不为空时，说明管道中没有数据；当生产队列不为空时，说明管道已经满了；不可能同时存在消费队列和生产队列都不为空的情况？？？
-对于非缓冲队列，当消费队列不为空时，说明此时生产队列为空，消费队列被阻塞等待中；当生产队列不为空时，说明消费队列为空，生产队列被阻塞等待中；
+对于缓冲管道，当消费队列不为空时，说明管道中没有数据；当生产队列不为空时，说明管道已经满了；不可能同时存在消费队列和生产队列都不为空的情况？？？
+对于非缓冲管道，当消费队列不为空时，说明此时生产队列为空，消费队列被阻塞等待中；当生产队列不为空时，说明消费队列为空，生产队列被阻塞等待中；
 :::
 ::: details
 ```go
@@ -259,9 +267,6 @@ func chansend(c *hchan, ep unsafe.Pointer, block bool, callerpc uintptr) bool {
 	if c.qcount < c.dataqsiz {
 		// 找到最新能够写入元素的位置
 		qp := chanbuf(c, c.sendx)
-		if raceenabled {
-			racenotify(c, c.sendx, nil)
-		}
 		// 将要写入的元素的值拷贝到该处
 		typedmemmove(c.elemtype, qp, ep)
 		c.sendx++                  // 写入的位置往后移
@@ -331,8 +336,7 @@ func chansend(c *hchan, ep unsafe.Pointer, block bool, callerpc uintptr) bool {
 	return true
 }
 
-// send 处理空通道 c 上的发送操作。发送方发送的值 ep 被复制到接收方 sg。然后接收器被唤醒。
-// 通道 c 必须为空并锁定。send 通过 unlockf 解锁 c。sg 必须已从 c 中取消排队，ep 必须为非 nil 并指向堆或调用方的堆栈。
+// send 通过 unlockf 解锁 c，sg 必须已从 c 的消费者队列中出队，ep 必须为非 nil 并指向堆或调用方的堆栈
 func send(c *hchan, sg *sudog, ep unsafe.Pointer, unlockf func(), skip int) {
 	// sg.elem 指向接收到的值存放的位置，如 val <- ch，指的就是 &val
 	if sg.elem != nil {
@@ -349,8 +353,7 @@ func send(c *hchan, sg *sudog, ep unsafe.Pointer, unlockf func(), skip int) {
 	}
 	// 唤醒接收的 goroutine. skip 和打印栈相关
 	// 调用 goready 函数将接收方 goroutine 唤醒并标记为可运行状态
-	// 并把其放入发送方所在处理器 P 的 runnext 字段等待执行
-	// runnext 字段表示最高优先级的 goroutine
+	// 并把其放入发送方所在处理器 P 的 runnext 字段等待执行，runnext 字段表示最高优先级的 goroutine
 	goready(gp, skip+1)
 }
 
